@@ -3,7 +3,14 @@ package com.objectcomputing.checkins.services.demographics;
 import io.micronaut.core.annotation.Nullable;
 import io.micronaut.http.HttpRequest;
 import io.micronaut.http.HttpResponse;
-import io.micronaut.http.annotation.*;
+import io.micronaut.http.HttpStatus;
+import io.micronaut.http.annotation.Body;
+import io.micronaut.http.annotation.Controller;
+import io.micronaut.http.annotation.Delete;
+import io.micronaut.http.annotation.Get;
+import io.micronaut.http.annotation.Post;
+import io.micronaut.http.annotation.Put;
+import io.micronaut.http.annotation.Status;
 import io.micronaut.scheduling.TaskExecutors;
 import io.micronaut.scheduling.annotation.ExecuteOn;
 import io.micronaut.security.annotation.Secured;
@@ -11,12 +18,10 @@ import io.micronaut.security.rules.SecurityRule;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
-import reactor.core.publisher.Mono;
 
 import java.net.URI;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Controller("/services/demographics")
 @ExecuteOn(TaskExecutors.BLOCKING)
@@ -37,38 +42,38 @@ public class DemographicsController {
      * @return {@link DemographicsResponseDTO} Returned demographic
      */
     @Get("/{id}")
-    public Mono<HttpResponse<DemographicsResponseDTO>> getById(UUID id) {
-        return Mono.fromCallable(() -> demographicsServices.getById(id))
-                .map(demographic -> HttpResponse.ok(fromEntity(demographic))
-                        .headers(headers -> headers.location(location(demographic.getId()))));
+    public HttpResponse<DemographicsResponseDTO> getById(UUID id) {
+        Demographics demographic = demographicsServices.getById(id);
+        return demographic == null ? null : HttpResponse.ok(fromEntity(demographic))
+                .headers(headers -> headers.location(location(demographic.getId())));
     }
 
     /**
      * Find demographics by memberId, gender, degreeLevel, industryTenure, personOfColor, veteran, militaryTenure, militaryBranch or find all.
      *
-     * @param memberId {@link UUID} Find demographics with the given memberId
-     * @param gender {@link String} Find demographics with the given gender
-     * @param degreeLevel {@link String} Find demographics with given degree level
+     * @param memberId       {@link UUID} Find demographics with the given memberId
+     * @param gender         {@link String} Find demographics with the given gender
+     * @param degreeLevel    {@link String} Find demographics with given degree level
      * @param industryTenure {@link Integer} Find demographics with given industry tenure
-     * @param personOfColor {@link Boolean} Find demographics who are persons of color
-     * @param veteran {@link Boolean} Find demographics for are veterans
+     * @param personOfColor  {@link Boolean} Find demographics who are persons of color
+     * @param veteran        {@link Boolean} Find demographics for are veterans
      * @param militaryTenure {@link Integer} Find demographics with given military tenure
      * @param militaryBranch {@link String} Find demographics with given military branch
      * @return {@link List <DemographicsResponseDTO>} List of demographics that match the input parameters
      */
     @Get("/{?memberId,gender,degreeLevel,industryTenure,personOfColor,veteran,militaryTenure,militaryBranch}")
-    public Mono<HttpResponse<List<DemographicsResponseDTO>>> findByValue(@Nullable UUID memberId,
-                                                                            @Nullable String gender,
-                                                                            @Nullable String degreeLevel,
-                                                                            @Nullable Integer industryTenure,
-                                                                            @Nullable Boolean personOfColor,
-                                                                            @Nullable Boolean veteran,
-                                                                            @Nullable Integer militaryTenure,
-                                                                            @Nullable String militaryBranch) {
-        return Mono.fromCallable(() -> demographicsServices.findByValues(memberId, gender, degreeLevel, industryTenure,
-                        personOfColor, veteran, militaryTenure, militaryBranch))
-                .map(demographicsEntities -> demographicsEntities.stream().map(this::fromEntity).collect(Collectors.toList()))
-                .map(HttpResponse::ok);
+    public List<DemographicsResponseDTO> findByValue(@Nullable UUID memberId,
+                                                     @Nullable String gender,
+                                                     @Nullable String degreeLevel,
+                                                     @Nullable Integer industryTenure,
+                                                     @Nullable Boolean personOfColor,
+                                                     @Nullable Boolean veteran,
+                                                     @Nullable Integer militaryTenure,
+                                                     @Nullable String militaryBranch) {
+        return demographicsServices.findByValues(memberId, gender, degreeLevel, industryTenure, personOfColor, veteran, militaryTenure, militaryBranch)
+                .stream()
+                .map(this::fromEntity)
+                .toList();
     }
 
     /**
@@ -78,15 +83,12 @@ public class DemographicsController {
      * @return {@link DemographicsResponseDTO} The created demographics
      */
     @Post
-    public Mono<HttpResponse<DemographicsResponseDTO>> save(@Body @Valid DemographicsCreateDTO demographics,
-                                                            HttpRequest<?> request) {
+    public HttpResponse<DemographicsResponseDTO> save(@Body @Valid DemographicsCreateDTO demographics,
+                                                      HttpRequest<?> request) {
 
-        return Mono.fromCallable(() -> demographicsServices.saveDemographics(fromDTO(demographics)))
-                .map(savedDemographics -> {
-                        DemographicsResponseDTO savedDemographicsResponse = fromEntity(savedDemographics);
-                        return HttpResponse.created(savedDemographicsResponse)
-                                .headers(headers -> headers.location(URI.create(String.format("%s/%s", request.getPath(), savedDemographicsResponse.getId()))));
-                });
+        Demographics savedDemographic = demographicsServices.saveDemographics(fromDTO(demographics));
+        return HttpResponse.created(fromEntity(savedDemographic))
+                .headers(headers -> headers.location(URI.create(String.format("%s/%s", request.getPath(), savedDemographic.getId()))));
     }
 
     /**
@@ -96,27 +98,23 @@ public class DemographicsController {
      * @return {@link DemographicsResponseDTO} The updated demographics
      */
     @Put
-    public Mono<HttpResponse<DemographicsResponseDTO>> update(@Body @Valid DemographicsUpdateDTO demographics,
-                                                                HttpRequest<?> request) {
+    public HttpResponse<DemographicsResponseDTO> update(@Body @Valid DemographicsUpdateDTO demographics,
+                                                        HttpRequest<?> request) {
 
-        return Mono.fromCallable(() -> demographicsServices.updateDemographics(fromDTO(demographics)))
-                .map(savedDemographics -> {
-                    DemographicsResponseDTO updatedDemographics = fromEntity(savedDemographics);
-                    return HttpResponse.ok(updatedDemographics)
-                            .headers(headers -> headers.location(URI.create(String.format("%s/%s", request.getPath(), updatedDemographics.getId()))));
-                });
+        Demographics savedDemographics = demographicsServices.updateDemographics(fromDTO(demographics));
+        return HttpResponse.ok(fromEntity(savedDemographics))
+                .headers(headers -> headers.location(URI.create(String.format("%s/%s", request.getPath(), savedDemographics.getId()))));
     }
 
     /**
      * Delete demographics.
      *
      * @param id {@link UUID} Demographics unique id
-     * @return
      */
     @Delete("/{id}")
-    public Mono<HttpResponse<?>> delete(@NotNull UUID id) {
-        return Mono.fromRunnable(() -> demographicsServices.deleteDemographics(id))
-                .thenReturn(HttpResponse.ok());
+    @Status(value = HttpStatus.OK)
+    public void delete(@NotNull UUID id) {
+        demographicsServices.deleteDemographics(id);
     }
 
     protected URI location(UUID id) {
@@ -148,5 +146,4 @@ public class DemographicsController {
         dto.setVeteran(entity.getVeteran());
         return dto;
     }
-
 }
